[gd_scene load_steps=3 format=3 uid="uid://bje41kxk7ldrj"]

[ext_resource type="Script" path="res://eca_helper.gd" id="1_kqp45"]
[ext_resource type="Texture2D" uid="uid://barg3g5qba8j" path="res://Assets/sept_fetiche.png" id="2_qipm8"]

[node name="EcaHelper" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_kqp45")

[node name="Bg_color" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.258824, 0.258824, 0.258824, 1)

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(400, 600)
visible = true
ok_button_text = "Open"
dialog_hide_on_ok = true
cancel_button_text = "Annuler"
file_mode = 0
access = 2
root_subfolder = "C:\\Users\\User\\AppData\\Roaming\\zaap\\gamesLogs\\wakfu\\logs"
filters = PackedStringArray("wakfu_chat.log")
show_hidden_files = true

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_qipm8")

[node name="LabelCompteurSeptFetiche" type="Label" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="Outils" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ButtonReset" type="Button" parent="Outils"]
layout_mode = 2
text = "Reset"

[node name="ButtonPlus" type="Button" parent="Outils"]
layout_mode = 2
text = "+"

[node name="ButtonMoins" type="Button" parent="Outils"]
layout_mode = 2
text = "-"

[node name="VBoxContainer" type="VBoxContainer" parent="Outils"]
layout_mode = 2

[node name="Label" type="Label" parent="Outils/VBoxContainer"]
layout_mode = 2
text = "Couleur BG"

[node name="ColorPicker" type="ColorPickerButton" parent="Outils/VBoxContainer"]
layout_mode = 2
text = "------"
color = Color(1, 1, 1, 1)

[connection signal="canceled" from="FileDialog" to="." method="_on_file_dialog_canceled"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="Outils/ButtonReset" to="." method="_on_button_reset_pressed"]
[connection signal="pressed" from="Outils/ButtonPlus" to="." method="_on_button_plus_pressed"]
[connection signal="pressed" from="Outils/ButtonMoins" to="." method="_on_button_moins_pressed"]
[connection signal="color_changed" from="Outils/VBoxContainer/ColorPicker" to="." method="_on_color_picker_color_changed"]
